Add throttler